[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scene/GJLogin.gd" type="Script" id=1]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "shake"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 10, 10 ), Vector2( 0, 0 ), Vector2( 10, 10 ), Vector2( 0, 0 ), Vector2( 10, 10 ), Vector2( 0, 0 ), Vector2( 10, 10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 44
font_data = ExtResource( 2 )

[node name="GjLoginScene" type="Control"]
margin_right = 336.0
margin_bottom = 550.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 2.0
anchor_bottom = 2.52
margin_right = 272.0
margin_bottom = 423.0

[node name="UserNameLb" type="Label" parent="HBoxContainer"]
margin_right = 272.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.333333, 0.643137, 0.121569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Username"
align = 1

[node name="UserName" type="LineEdit" parent="HBoxContainer"]
margin_top = 79.0
margin_right = 272.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 1 )
expand_to_text_length = true

[node name="UserTokenLb" type="Label" parent="HBoxContainer"]
margin_top = 168.0
margin_right = 272.0
margin_bottom = 243.0
custom_colors/font_color = Color( 0.333333, 0.643137, 0.121569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Token"
align = 1

[node name="UserToken" type="LineEdit" parent="HBoxContainer"]
margin_top = 247.0
margin_right = 272.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 2 )
secret = true
expand_to_text_length = true

[node name="Login" type="Button" parent="HBoxContainer"]
margin_top = 336.0
margin_right = 272.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 3 )
text = "Login"

[node name="Close" type="Button" parent="HBoxContainer"]
margin_top = 421.0
margin_right = 272.0
margin_bottom = 502.0
custom_fonts/font = SubResource( 5 )
text = "Close"

[node name="Label" type="Label" parent="HBoxContainer"]
visible = false
margin_right = 272.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.333333, 0.643137, 0.121569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Welcome"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/shake = SubResource( 7 )

[node name="WaitLb" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )
text = "Wait"

[connection signal="pressed" from="HBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
